# day_trade

./: .gitignore  .~lock.InvestorsUnderground.odt#  InvestorsUnderground.odt  README.md  REQUIREMENTS.txt  REQUIRMENTS.txt  candlestick_chart.py  mastrategy.py  pyproject.toml  stock_pattern_finder.py  tox.ini
.github/workflows/: build-and-test.yml
data/: AAPL_15min_.csv  AAPL_1min_.csv  AAPL_5min_.csv  AMBO_2025-10-09 15:55:49.csv  AMZN_15min_.csv  AMZN_1min_.csv  AMZN_2025-08-11 09:50:54.csv  AMZN_2025-08-16 00:30:35.csv  AMZN_2025-08-16 00:36:37.csv  AMZN_2025-08-16 00:38:37.csv  AMZN_2025-08-16 00:40:28.csv  AMZN_2025-08-16 00:44:43.csv  AMZN_2025-08-16 00:46:21.csv  AMZN_2025-08-16 00:50:16.csv  AMZN_2025-08-16 00:52:00.csv  AMZN_2025-08-16 00:54:03.csv  AMZN_2025-08-16 00:55:24.csv  AMZN_2025-08-16 00:56:47.csv  AMZN_2025-08-16 00:58:18.csv  AMZN_2025-08-16 01:19:02.csv  AMZN_2025-08-16 01:21:07.csv  AMZN_2025-08-16 01:22:35.csv  AMZN_2025-08-16 01:27:40.csv  AMZN_2025-08-16 01:28:38.csv  AMZN_2025-08-16 01:30:48.csv  AMZN_2025-08-16 01:31:49.csv  AMZN_2025-08-16 01:34:29.csv  AMZN_5min_.csv  AQMS_2025-10-14 15:55:01.csv  ARBK_2025-10-06 15:54:16.csv  ARBK_2025-10-06 19:19:06.csv  ARBK_2025-10-06 19:39:18.csv  ARBK_2025-10-06 19:43:02.csv  ARBK_2025-10-06 19:46:21.csv  ARBK_2025-10-06 19:50:18.csv  ARBK_2025-10-06 20:43:04.csv  BBAI_2025-10-10 15:54:13.csv  BJDX_2025-10-10 15:54:44.csv  BLDP_2025-08-16 01:10:11.csv  BLDP_2025-08-16 01:13:37.csv  (+98 more)
files/: account_tokens  account_tokens.json
src/: DayTradeStrategy.py  Indicators.py  MySQLConn.py  OAuthProcess.py  OptionsTrade.py  PDFReport.py  SchwabAccount.py  TradeAccount.py  TraderDB.py  client.py  day_trade.py  test_day_trade.py  tokens.json  trade_account.py
