[tool.poetry]
name 		= "src"
readme 		= "README.md"
version 	= "0.1.0"
authors 	= ["Sean A. Burner"]
description 	= "Day_Trade"

[tool.poetry.dependencies]
python   		= "^3.11"
pandas   		= "^2.0"
requests 		= "^2.32"
mysql-connector-python 	= "^9.4"
mysqlclient            	= "^2.2"
pyodbc  		= "^5.2"
pymssql  		= "^2.3"
matplotlib   		= "^3.10"
reportlab       	= "^4.4"
loguru          	= "^0.7"
selenium        	= "^4.34"
webdriver-manager 	= "^4.0"


[tool.poetry.group.dev.dependencies]
tox = "^4.26.0"
pytest = "^8.3.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
